--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<p>Just testing things out dw</p>
+<p>This page isn't done yet :P</p>
+<p>In the meanwhile why don't you visit these links</p>
+
+<ul>
+  <li>
+    <a href="/connected">A logic gates game</a>
+  </li>
+  <li>
+    <a href="/figs">browser Figura docs</a>
+  </li>
+</ul>
