--- a/index.html
+++ b/index.html
@@ -8,4 +8,7 @@
   <li>
     <a href="/figs">browser Figura docs</a>
   </li>
+  <li>
+    <a href="/generator">A fancy... cool... good looking... phrase generator... thing</a>
+  </li>
 </ul>
